<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HelpActivity">

    <TextView
        android:id="@+id/help_title"
        android:text="@string/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_margin="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/help_purpose"
        android:text="@string/help_purpose"
        app:layout_constraintTop_toBottomOf="@id/help_title"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/help_title" />

    <TextView
        android:id="@+id/help_profile_title"
        android:text="@string/help_text_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/help_purpose"
        app:layout_constraintLeft_toLeftOf="@id/help_title" />

    <TextView
        android:id="@+id/help_text_profile_personal"
        android:text="@string/help_text_profile_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/help_profile_title"
        app:layout_constraintLeft_toLeftOf="@id/help_profile_title"/>

    <TextView
        android:id="@+id/help_text_profile_professional"
        android:text="@string/help_text_profile_professional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/help_text_profile_personal"
        app:layout_constraintLeft_toLeftOf="@id/help_profile_title"/>

    <TextView
        android:id="@+id/help_text_profile_other"
        android:text="@string/help_text_profile_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/help_text_profile_professional"
        app:layout_constraintLeft_toLeftOf="@id/help_profile_title"/>

    <TextView
        android:text="@string/help_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/help_text_profile_other"
        app:layout_constraintLeft_toLeftOf="@id/help_title"/>

</android.support.constraint.ConstraintLayout>